# jupyterhubs

./: pyproject.toml
jupyterhub-main/: setup.py
jupyterhub-main/docs/: generate-metrics.py
jupyterhub-main/docs/source/: conf.py
jupyterhub-main/docs/source/rbac/: generate-scope-table.py
jupyterhub-main/examples/external-oauth/: whoami-oauth-basic.py
jupyterhub-main/examples/service-whoami-flask/: whoami-flask.py
jupyterhub-main/jupyterhub/: app.py  auth.py  crypto.py  log.py  metrics.py  objects.py  orm.py  proxy.py  roles.py  scopes.py  spawner.py  traitlets.py  user.py  utils.py
jupyterhub-main/jupyterhub/alembic/versions/: 833da8570507_rbac.py
jupyterhub-main/jupyterhub/apihandlers/: auth.py  base.py  hub.py  users.py
jupyterhub-main/jupyterhub/handlers/: base.py  login.py  pages.py
jupyterhub-main/jupyterhub/oauth/: provider.py
jupyterhub-main/jupyterhub/services/: auth.py  service.py
jupyterhub-main/jupyterhub/singleuser/: app.py  mixins.py
jupyterhub-main/jupyterhub/tests/: mocking.py  populate_db.py  test_api.py  test_app.py  test_named_servers.py  test_pages.py  test_roles.py  test_scopes.py  test_services_auth.py  test_singleuser.py  test_spawner.py  test_user.py  test_version.py  utils.py
