[tool.poetry]
name = "repl_python3_jupyterhub"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
entrypoints = "^0.3"
psutil = "^5.9.0"
cryptography = "^36.0.1"
packaging = "^21.3"
ipython = "^8.0.1"
pamela = "^1.0.0"
jupyterlab = "^3.2.8"
Jinja2 = "^3.0.3"
jupyter-telemetry = "^0.1.0"
oauthlib = "^3.1.1"
SQLAlchemy = "^1.4.31"
prometheus-client = "^0.13.0"
certipy = "^0.1.3"
tornado = "^6.1"
async_generator = "^1.10"
statsd = "^3.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
